# onnxruntime

./: CMakeLists.txt
